--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ font-family:Informal Roman; </style> <title>SUPER CARS<TITLE>
 </Head>
 <body>
 <h1>Latest news about super cars every month</h1>
-<h3>Want to know the speed of your favourite cars</h3>
+  <h3>Want to know the speed of your favourite cars <A HREF="advaith.9/index. doctype html>CLICK HERE </A></h3>
 </body>
 </html>
