--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <center>
 <h1>Latest news about super cars every month</h1>
-  <h3>Want to know the speed of your favourite cars <A HREF="advaith.9/index. doctype html>CLICK HERE </A></h3><br>
+  <h3>Want to know the speed of your favourite cars <A HREF="advaith.9/index. doctype html>CLICK HERE </A><br>
  <p>Cars are great and every one knows that right?? but what about supercars theyre fast, comfortable , and some can can go into very harsh terrain <br> 
-    but have you seen which is fast and comfartable?? no then you have come to right website</p>
+    but have you seen which is fast and comfartable?? no then you have come to right website</p></h3>
     </center>
 </body>
 </html>
