--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <center>
 <h1>Latest news about super cars every month</h1>
-    <h3>Want to know the speed of your favourite cars</h3> <A HREF="advaith.9/index2.html"> CLICK HERE </A> <br>
+    <h3>Want to know the speed of your favourite cars</h3> <A HREF="index2.html"> CLICK HERE </A> <br>
  <p>Cars are great and every one knows that right?? but what about supercars theyre fast, comfortable , and some can can
     go into very harsh terrain<br>  but have you seen which is fast and comfartable?? no, then you have come to right website</p>
     </center> 
