--- a/index2.html
+++ b/index2.html
@@ -7,8 +7,8 @@
 <body>
 <h1>SPEEEEEEED!!??</h1>
 <h3> <TABLE>
-<TH>CARS<TH>
-<TH>SPEED<TH>
+<TH>CARS</TH>
+<TH>SPEED</TH>
 <TR><TD>Lamborghini aventedor</TD>
 <td>350 km <td></tr>
   <tr> <td>Bugatti chiron</td>
