--- a/index2.html
+++ b/index2.html
@@ -7,10 +7,10 @@
 <body>
 <h1>SPEEEEEEED!!??</h1>
 <h3> <TABLE>
-<TH>CARS</TH>
-<TH>SPEED</TH>
+  <TH><td>CARS</td>
+    <Td>SPEED</td></TH>
 <TR><TD>Lamborghini aventedor</TD>
-<td>350 km <td></tr>
+<td>350 km </td></tr>
   <tr> <td>Bugatti chiron</td>
     <td>420 km<td></tr>
   </table></h3>
