--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,7 @@
   <title>SUPER CARS</TITLE>
 </Head>
 <body>
+<font color=white>  
 <h1>SPEEEEEEED!!??</h1>
 <h3> <TABLE>
   <TH><td>CARS</td>
@@ -14,5 +15,6 @@
   <tr> <td>Bugatti chiron</td>
     <td>420 km<td></tr>
   </table></h3>
+  </font>
 </body>
 </html>
