--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,9 @@
 <body>
 <font color=white>  
 <h1>SPEEEEEEED!!??</h1>
-<h3> <TABLE>
+  </font>
+<h3> <font color=white>
+  <TABLE>
   <TH><td>CARS</td>
     <Td>SPEED</td></TH>
 <TR><TD>Lamborghini aventedor</TD>
