--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,8 @@
 <td>350 km </td></tr>
   <tr> <td>Bugatti chiron</td>
     <td>420 km<td></tr>
-  </table></h3>
-  </font>
+  </table>   </font>
+  </h3>
+
 </body>
 </html>
