--- a/index2.html
+++ b/index2.html
@@ -5,10 +5,10 @@
   <title>SUPER CARS</TITLE>
 </Head>
 <body>
-<font color=white>  
+
 <h1>SPEEEEEEED!!??</h1>
   </font>
-<h3> <font color=white>
+<h3> 
   <TABLE>
   <TH><td>CARS</td>
     <Td>SPEED</td></TH>
@@ -16,7 +16,7 @@
 <td>350 km </td></tr>
   <tr> <td>Bugatti chiron</td>
     <td>420 km<td></tr>
-  </table>   </font>
+  </table>   
   </h3>
 
 </body>
