--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <p> NEWS of supercars <br> Now the new bugatti chiron has arrived and its very fast and people even say it can 288 mp/h 
       and it takes up a lot of air and petrol<br>just like its brother Bugatti veyron there was so much hype for that car and now this.<br>
       Bugatti is on a roll in making the fastest car and can you believe it bugatti chiron is limited to only 261 ml/h so it co
-      uld actully manage to do 288ml/h <br> that they dreamed of.</p>
+      uld actully manage to do 288ml/h <br> that they dreamed of.lets hope that they reach that i wish them good luck.Now lets go to ferrari
+    <br> no news sorry):. Lets see lamborghini lamborghini hurracan gets auto car innovation award.</p>
     </center> 
 </body>
 </html>
