--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       and it takes up a lot of air and petrol<br>just like its brother Bugatti veyron there was so much hype for that car and now this.<br>
       Bugatti is on a roll in making the fastest car and can you believe it bugatti chiron is limited to only 261 ml/h so it co
       uld actully manage to do 288ml/h <br> that they dreamed of.lets hope that they reach that i wish them good luck.Now lets go to ferrari
-    <br> no news sorry):. Lets see lamborghini lamborghini hurracan gets auto car innovation award.</p>
+    <br> no news sorry):. Lets see lamborghini lamborghini hurracan gets auto car innovation award which is a pretty big award I wish them 
+      also good luck.<br>Porshe wins the Lemans cup it is their nineteenth win of this tournament.Nissan has made a concept monster truck
+      <br>for latin america.
+    </p>
     </center> 
 </body>
 </html>
