--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <center>
 <h1>Latest news about super cars every month</h1>
-    <h3>Want to know the speed of your favourite cars</h3> <A HREF="index2.html"> CLICK HERE </A> <br>
+    <h3>Want to know the speed of your favourite cars</h3> <A HREF="index2.html"> CLICK HERE </A> <br><b>
  <p>Cars are great and every one knows that right?? but what about supercars theyre fast, comfortable , and some can can
     go into very harsh terrain<br>  but have you seen which is fast and comfartable?? no, then you have come to right website</p>
     <p> NEWS of supercars <br> Now the new bugatti chiron has arrived and its very fast and people even say it can 288 mp/h 
@@ -19,7 +19,7 @@
       uld actully manage to do 288ml/h <br> that they dreamed of.lets hope that they reach that i wish them good luck.Now lets go to ferrari
     <br> no news sorry):. Lets see lamborghini lamborghini hurracan gets auto car innovation award which is a pretty big award I wish them 
       also good luck.<br>Porshe wins the Lemans cup it is their nineteenth win of this tournament.Nissan has made a concept monster truck
-      <br>for latin america.
+      <br>for latin america.</b>
     </p>
     </center> 
 </body>
