--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <center>
 <h1>Latest news about super cars every month</h1>
     <h3>Want to know the speed of your favourite cars</h3> <A HREF="index2.html"> CLICK HERE </A> <br><b>
- <p>Cars are great and every one knows that right?? but what about supercars theyre fast, comfortable , and some can can
-    go into very harsh terrain<br>  but have you seen which is fast and comfartable?? no, then you have come to right website</p>
+ <h3>Cars are great and every one knows that right?? but what about supercars theyre fast, comfortable , and some can can
+    go into very harsh terrain<br>  but have you seen which is fast and comfartable?? no, then you have come to right website</h3>
     <p> NEWS of supercars <br> Now the new bugatti chiron has arrived and its very fast and people even say it can 288 mp/h 
       and it takes up a lot of air and petrol<br>just like its brother Bugatti veyron there was so much hype for that car and now this.<br>
       Bugatti is on a roll in making the fastest car and can you believe it bugatti chiron is limited to only 261 ml/h so it co
