--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <p> NEWS of supercars <br> Now the new bugatti chiron has arrived and its very fast and people even say it can 288 mp/h 
       and it takes up a lot of air and petrol<br>just like its brother Bugatti veyron there was so much hype for that car and now this.<br>
       Bugatti is on a roll in making the fastest car and can you believe it bugatti chiron is limited to only 261 ml/h so it co
-      uld actully manage to do 288ml/h <br> that they dreamed of.lets hope that they reach that i wish them good luck.Now lets go to ferrari
+      uld actully manage to do 288ml/h <br> that they dreamed of.lets hope that they reach that I wish them good luck.Now lets go to ferrari
     <br> no news sorry):. Lets see lamborghini lamborghini hurracan gets auto car innovation award which is a pretty big award I wish them 
       also good luck.<br>Porshe wins the Lemans cup it is their nineteenth win of this tournament.Nissan has made a concept monster truck
       <br>for latin america.Have you heard of grand tour it has the same hosts as topgear(old version,not new!) Jeremy Clarkson,Richard Hammond
-   <br>James May. It is very fun to watch. the concept is that every show their a t new place and they will do challenges according to that <br>
+   <br>James May. It is very fun to watch. the concept is that every show IS at a new place and they will do challenges according to that <br>
    terrain. It is very funny like their old show(topgear) but it is owned by amazon. The only way you can watch it is by amazon prime(btw i'
     m not sponsering them). <br></b>                                                                                                                                           
     </p>
